Bug 1681604 - Fixed main content being too close to header
- Fixed main content container being too close to header when there are
  two or more messages.
- Minor styles tidy up, there was vertical scroll bar on dropdown menu.
- Added more space between header and main content for Ocean theme

behatnotneeded: styling only
(cherry picked from commit 9f85a26d1a0053df7798367340cb5c6822944888)

--- a/htdocs/theme/ocean/sass/layout/_layout.scss
+++ b/htdocs/theme/ocean/sass/layout/_layout.scss
@@ -16,3 +16,13 @@ body {
         }
     }
 }
+
+@for $i from 1 through 5 {
+    .header.message-count-#{$i} {
+        + .main-content {
+            @media (min-width: $screen-sm-min) {
+                margin-top: ($i * 33px) + 40px;
+            }
+        }
+    }
+}
