--- a/htdocs/theme/raw/sass/layout/nav/_main-nav.scss
+++ b/htdocs/theme/raw/sass/layout/nav/_main-nav.scss
@@ -76,7 +76,6 @@
             color: $navbar-default-color;
             background-color: $navbar-default-bg;
             padding: 10px 15px;
-            line-height: 20px;
             font-weight: normal;
             border-top: 1px solid $navbar-default-border;
             border-bottom: 1px solid $navbar-default-border;
